# rpdiscordrewrite

./: .botsettings.json.swp  .gitignore  LICENSE  LICENSE.lkshs  LICENSE.lkshw  README.md  bad_entries.json  bot.py  botsettings.default.json  name_list.json  old_bot.py  ptu_sections.txt  serverfetcher.py  stack.yaml  tes.py  test.py  test.sh  work.txt
Haskell Server/: Test.hs
Haskell Server/rpdiscordserver/: .gitignore  package.yaml  rpdiscordserver.cabal  stack.yaml
Haskell Server/rpdiscordserver/rpdiscordserver.hsproj/: .uuid  rpdiscordserver.cabal
Haskell_Server/: Main.hs
Haskell_Server/rpdiscordserver/: ChangeLog.md  LICENSE  README.md  Tester.hs  cabal.config  package.yaml  rpdiscordserver.cabal
cogs/: character.py  general.py  init.py  ref.py  roll.py  server_settings.py  statistics.json
cogs/bookdata/: rebuilding_the_wild.json
cogs/serverdata/: permissions.json  prefixes.json  signs.json
cogs/utils/: SimplePaginator.py
docs/: Makefile
docs/source/: conf.py  index.rst  privacy.rst
json_dump/: entries.json  entries.py  fixer.py  multientries.json
json_dump/05/: ability.json  blessing.json  capability.json  d_b.json  edge.json  feature.json  item.json  keyword.json  list.json  maneuver.json  mon_forms.json  mon_nature.json  move.json  pokemon.json  status.json
json_dump/al/: blessing.json  capability.json  d_b.json  edge.json  item.json  keyword.json  list.json  mon_forms.json  move.json  pokemon.json  status.json
json_dump/pt/: ability.json  blessing.json  capability.json  d_b.json  edge.json  feature.json  item.json  keyword.json  list.json  maneuver.json  mon_forms.json  mon_nature.json  move.json  pokemon.json  status.json
json_form/: galar_data.json  galar_dump.py  gen.py
psql_database_backup/: user_pickle.sql
(+46 files in other folders)
