name: rpdiscordserver
version: 1.0.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2018 Corin (CWStra)
maintainer: cwstra@gmail.com
homepage: https://github.com/githubuser/rpdiscordserver#readme
bug-reports: https://github.com/githubuser/rpdiscordserver/issues
description:
    Please see the README on GitHub at <https://github.com/githubuser/diceparser#readme>
author: Corin (CWStra)
extra-source-files:
    ChangeLog.md
    README.md
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

source-repository head
    type: git
    location: https://github.com/githubuser/rpdiscordserver

library
    build-depends:
        Chart -any,
        Chart-cairo -any,
        aeson -any,
        arithmoi -any,
        base -any,
        extra -any,
        mersenne-random-pure64 -any,
        primitive -any,
        scotty -any,
        text -any,
        timeit -any,
        unordered-containers -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Paths_rpdiscordserver

executable rpdiscordserver
    main-is: Main.hs
    build-depends:
        Chart -any,
        Chart-cairo -any,
        aeson -any,
        arithmoi -any,
        base -any,
        extra -any,
        mersenne-random-pure64 -any,
        primitive -any,
        rpdiscordserver -any,
        scotty -any,
        text -any,
        timeit -any,
        unordered-containers -any
    default-language: Haskell2010
    hs-source-dirs: app
    other-modules:
        Paths_rpdiscordserver
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

